@@ -10,15 +10,17 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>model</module>
-        <module>view</module>
         <module>controller</module>
+        <module>view</module>
+
     </modules>
 
     <properties>
         <maven.version>3.3.9</maven.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jdk.version>11</jdk.version>
+        <jdk.version>12</jdk.version>
+        <javafx.version>11</javafx.version>
     </properties>
 
 
@@ -35,6 +37,12 @@
             <version>5.0.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.14.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -48,6 +56,21 @@
                 <groupId>be.hogent</groupId>
                 <artifactId>model</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-controls</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-fxml</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.17</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -87,7 +110,23 @@
                         <!-- If replace by true, the test executes -->
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.3</version>
+                    <configuration>
+                        <source>12</source>
+                        <target>12</target>
+                        <release>12</release>
+                        <mainClass>MainView/be.hogent.eindproject.view</mainClass>
+                        <compilerArgs>
+                            <arg>--add-exports</arg>
+                            <arg>javafx.graphics/com.sun.glass.ui=org.openjfx.hellofx</arg>
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
             </plugins>
+
         </pluginManagement>
     </build>
 </project>
